fix h1 align

--- a/css/main.css
+++ b/css/main.css
@@ -117,9 +117,7 @@ width: 100vw;
 
     #page-content h1 {
         font-size: 2.7em;
-        text-align: center;
         padding-top: 30px;
-
     }
 
 
@@ -259,6 +257,10 @@ padding-right: 2%;
 position: absolute;
 right: 0;
 display: inline;
+}
+
+#page-content h1 {
+    text-align: center;
 }
 
 
